--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -3,6 +3,9 @@ KERNEL_ARCH_CPPFLAGS=
 KERNEL_ARCH_LDFLAGS=
 KERNEL_ARCH_LIBS=
 
+
 KERNEL_ARCH_OBJS=\
-$(ARCHDIR)/boot.o \
+$(ARCHDIR)/asm/boot.o \
 $(ARCHDIR)/tty.o \
+$(ARCHDIR)/asm/crti.o \
+$(ARCHDIR)/asm/crtn.o \
