--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -9,3 +9,9 @@ $(ARCHDIR)/asm/boot.o \
 $(ARCHDIR)/tty.o \
 $(ARCHDIR)/asm/crti.o \
 $(ARCHDIR)/asm/crtn.o \
+$(ARCHDIR)/gdt.o \
+$(ARCHDIR)/idt.o \
+$(ARCHDIR)/pic.o \
+$(ARCHDIR)/asm/isr_stubs.o \
+$(ARCHDIR)/isr.o \
+$(ARCHDIR)/asm/gdt_flush.o \
