--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -15,3 +15,5 @@ $(ARCHDIR)/pic.o \
 $(ARCHDIR)/asm/isr_stubs.o \
 $(ARCHDIR)/isr.o \
 $(ARCHDIR)/asm/gdt_flush.o \
+$(ARCHDIR)/asm/irq_stubs.o \
+$(ARCHDIR)/irq.o \
