--- a/libc/Makefile
+++ b/libc/Makefile
@@ -36,6 +36,8 @@ $(ARCH_FREEOBJS) \
 stdio/printf.o \
 stdio/putchar.o \
 stdio/puts.o \
+stdio/getchar.o \
+stdio/scanf.o \
 stdlib/abort.o \
 string/memcmp.o \
 string/memcpy.o \
